# shopty

./: Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: container.yaml
examples/: README.md  hparams.yaml  train.py  train_nn.py
shopty/: __init__.py  cli.py  experiments.py  optimize.py  optimizers.py  params.py  supervisors.py
tool/: build-image.sh  build-package.sh  check-all.sh  check-format.sh  check-lints.sh  check-types.sh  publish-package.sh  run-format.sh  run-image.sh
